--- a/1 JavaScript Home Work/Lesson 1/index.html
+++ b/1 JavaScript Home Work/Lesson 1/index.html
@@ -12,6 +12,9 @@
     <p>Test 2</p>
     <p>Test 34</p>
     <p>Test 34</p>
+    <p>Test 34</p>
+    <p>Test 74</p>
+    <p>Test 74</p>
 
 
 </body>
