--- a/1 JavaScript Home Work/Lesson 2/03 exemple.html
+++ b/1 JavaScript Home Work/Lesson 2/03 exemple.html
@@ -6,7 +6,7 @@
     <title>Lesson 2.3</title>
 </head>
 <body>
-    <p id="output">Hello</p>
+    <p id="output">Hello world</p>
     <button id="btn">Скажи привіт!</button>
 
     <script>
